# avian

./: README.md
.github/workflows/: ci.yml
benches/: Cargo.toml
crates/avian2d/: Cargo.toml
crates/avian3d/: Cargo.toml
crates/avian3d/examples/: bvh.rs  chain_3d.rs  move_and_slide_3d.rs  voxels_3d.rs
crates/examples_common_2d/: Cargo.toml
crates/examples_common_3d/: Cargo.toml
migration-guides/: 0.4-to-0.5.md  0.5-to-main.md
src/: lib.rs
src/collider_tree/: diagnostics.rs  mod.rs  optimization.rs  plugin.rs  proxy_key.rs  tree.rs  update.rs
src/collision/: diagnostics.rs  hooks.rs
src/collision/broad_phase/: bvh_broad_phase.rs  diagnostics.rs  mod.rs
src/collision/collider/: backend.rs  layers.rs  mod.rs
src/collision/collider/parry/: mod.rs
src/collision/contact_types/: contact_graph.rs
src/collision/narrow_phase/: system_param.rs
src/data_structures/: sparse_secondary_map.rs
src/debug_render/: configuration.rs  gizmos.rs  mod.rs
src/diagnostics/: ui.rs
src/dynamics/: mod.rs
src/dynamics/solver/: constraint_graph.rs
src/dynamics/solver/islands/: mod.rs  sleeping.rs
src/dynamics/solver/joint_graph/: plugin.rs
src/dynamics/solver/solver_body/: plugin.rs
src/physics_transform/: helper.rs  mod.rs
src/schedule/: mod.rs
src/tests/: determinism_2d.rs
